# CustomGaussQuad

./: .gitignore  README.md  custom_gauss_quad.h  meson.build
subprojects/: boost.ut.wrap
tests/: mpfr_quadrature_test.cpp  quadrature_test.cpp
